<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">Downloading</string>
    <string name="button_loading_120">Downloading.</string>
    <string name="button_loading_240">Downloading..</string>
    <string name="button_loading_350">Downloading...</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_using_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_using_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="download_using_refrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="notification_message_body">Download Finished</string>
    <string name="rbtn_null_toast">Please, select a Download Option</string>
    <string name="txt_title_file_name">File Name:</string>
    <string name="txt_title_status">Status:</string>
    <string name="btn_back_to_home">Back to Home</string>
    <string name="generic_image_description">Generic Image</string>
    <string name="btn_idle_status_text">Click to Download</string>
</resources>
