<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/txt_name_title"
        style="@style/txt_default_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_title_file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_status_title"
        style="@style/txt_default_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_status_body"
        app:layout_constraintStart_toStartOf="@+id/txt_name_title" />

    <TextView
        android:id="@+id/txt_name_body"
        style="@style/txt_default_detail_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_name_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/download_using_glide" />

    <TextView
        android:id="@+id/txt_status_body"
        style="@style/txt_default_detail_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_name_body"
        app:layout_constraintStart_toStartOf="@+id/txt_name_body"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_body"
        tools:text="Fail" />

    <Button
        android:id="@+id/btn_back_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_back_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_status_body"
        app:layout_constraintStart_toStartOf="@+id/txt_status_title" />
</androidx.constraintlayout.motion.widget.MotionLayout>